--- a/source/ProjetFinalEval/ProjetFinalEval.csproj
+++ b/source/ProjetFinalEval/ProjetFinalEval.csproj
@@ -4687,7 +4687,7 @@
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Home\About.cshtml" />
     <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Acceuil.cshtml" />
+    <Content Include="Views\Home\Accueil.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
     <Content Include="Views\Account\_ChangePasswordPartial.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
