--- a/source/ProjetFinalEval/Web.config
+++ b/source/ProjetFinalEval/Web.config
@@ -11,6 +11,7 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="server=localhost;user id=root;database=bd_evaluation" providerName="MySql.Data.MySqlClient" />
     <add name="bd_evaluationEntities3" connectionString="metadata=res://*/bd_evaluation.csdl|res://*/bd_evaluation.ssdl|res://*/bd_evaluation.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=bd_evaluation&quot;" providerName="System.Data.EntityClient" />
+    <add name="bd_evaluationEntities" connectionString="metadata=res://*/bd_evaluation.csdl|res://*/bd_evaluation.ssdl|res://*/bd_evaluation.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=localhost;user id=root;database=bd_evaluation&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
